implemented auto-increment id of each dive

--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -11,12 +11,11 @@
 	<body>
 		<button onclick="Add_Dive()">Add Dive</button>
 		<div id = "main" align ="center">
-			<div id="container" align ="left">
+			<div class="container" id="1" align ="left">
 				<div id="dive" class="draggable">
 					<strong><p></p></strong>
 				</div>
 			</div>
 		</div>
-		<button onclick="Update()">Dive</button>
 	</body>
 </html>
