--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -11,11 +11,12 @@
 	<body>
 		<button onclick="Add_Dive()">Add Dive</button>
 		<div id = "main" align ="center">
-			<div class="container" id="1" align ="left">
-				<div id="dive" class="draggable">
+			<div id="1" class="container" align ="left">
+				<div id="1" class="draggable dive" data-pg="1">
 					<strong><p></p></strong>
 				</div>
 			</div>
 		</div>
+		<button onclick="Update()">Update</button>
 	</body>
 </html>
