Auto adjust width when adding a new dive.

--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -13,7 +13,7 @@
 		<div id = "main" align ="center">
 			<div id="1" class="container" align ="left">
 				<div id="1" class="draggable dive" data-pg="1">
-					<strong><p></p></strong>
+					<div id="time_depth"><strong><p></p></strong></div>
 				</div>
 			</div>
 		</div>
