--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -6,12 +6,14 @@
 		<script src="interact.js"></script>
 		<script src="functions.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
 	</head>
 
 	<body>
 		<button onclick="Add_Dive()">Add Dive</button>
 		<div id = "main" align ="center">
 			<div id="1" class="container" align ="left">
+				<div id="1" class="line"></div>
 				<div id="1" class="draggable dive" data-pg="1">
 					<div id="time_depth"><strong><p></p></strong></div>
 				</div>
