--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -6,16 +6,18 @@
 		<script src="interact.js"></script>
 		<script src="functions.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
+		<title>Farfalle</title>
 	</head>
 
 	<body>
-		<button onclick="Add_Dive()">Add Dive</button>
+		<button id="add" onclick="Add_Dive()">Add Dive</button>
+		<button id="delete" onclick="Delete_Dive()">Delete Dive</button>
 		<div id = "main" align ="center">
 			<div id="1" class="container" align ="left">
-				<div id="1" class="line"></div>
 				<div id="1" class="draggable dive" data-pg="1">
-					<div id="time_depth"><strong><p></p></strong></div>
+					<div id="time_depth">
+						<strong><p class="depth_time_txt"></p></strong>
+					</div>
 				</div>
 			</div>
 		</div>
