Dive Path is implemented using 3 css borders.

--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -14,6 +14,12 @@
 		<button id="delete" onclick="Delete_Dive()">Delete Dive</button>
 		<div id = "main" align ="center">
 			<div id="1" class="container" align ="left">
+				<div id="1" class="boat1"></div>
+				<div id="1" class="line">
+					<div class="line2"></div>
+					<div id="1" class="boat2"></div>
+					<div id="1" class="decomp_stop"></div>
+				</div>
 				<div id="1" class="draggable dive" data-pg="1">
 					<div id="time_depth">
 						<strong><p class="depth_time_txt"></p></strong>
