Refactor and add load

--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -10,15 +10,18 @@
 	</head>
 
 	<body>
-		<button id="add" onclick="Add_Dive()">Add Dive</button>
-		<button id="delete" onclick="Delete_Dive()">Delete Dive</button>
-		<div id = "main" align ="center">
-			<div id="1" class="container" align ="left">
-				<div id="1" class="boat1"></div>
-				<div id="1" class="line">
+		<button onclick="Add_Dive()">Add Dive</button>
+		<button onclick="Delete_Dive()">Delete Dive</button>
+        <button onclick="Load_Dive()">Load Dive</button>
+        <button onclick="Set_Dive('1', 40, 100)">Set Dive 1</button>
+        <button onclick="Set_Dive('2', 70, 200)">Set Dive 2</button>
+		<div id="main" align ="center">
+			<div class="container" align ="left">
+				<div class="boat1"></div>
+				<div class="line">
 					<div class="line2"></div>
-					<div id="1" class="boat2"></div>
-					<div id="1" class="decomp_stop"></div>
+					<div class="boat2"></div>
+					<div class="decomp_stop"></div>
 				</div>
 				<div id="1" class="draggable dive" data-pg="1">
 					<div id="time_depth">
