--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -24,6 +24,7 @@
 					<div id="time_depth">
 						<strong><p class="depth_time_txt"></p></strong>
 					</div>
+					<script>InitializeDive(1)</script>
 				</div>
 			</div>
 		</div>
