added/modified some graphics

--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -10,12 +10,13 @@
 	</head>
 
 	<body>
-		<button onclick="Add_Dive()">Add Dive</button>
-		<button onclick="Delete_Dive()">Delete Dive</button>
-        <button onclick="Load_Dive()">Load Dive</button>
-        <button onclick="Set_Dive('1', 40, 100)">Set Dive 1</button>
-        <button onclick="Set_Dive('2', 70, 200)">Set Dive 2</button>
-		<div id="main" align ="center">
+		<button id="add" onclick="Add_Dive()">Add Dive</button>
+		<button id="delete" onclick="Delete_Dive()">Delete Dive</button>
+        <button id="load" onclick="Load_Dive()">Load Dive</button>
+        <button id="setdive" onclick="Set_Dive('1', 40, 10)">Set Dive 1</button>
+        <div id="sky"></div>
+        <h1 id="warning">Warning: This SCUBA Planner is still a prototype. It cannot be used in actual dive planning</h1>
+		<div id="main">
 			<div class="container" align ="left">
 				<div class="boat1"></div>
 				<div class="line">
@@ -28,6 +29,7 @@
 						<strong><p class="depth_time_txt"></p></strong>
 					</div>
 				</div>
+				<script>Set_Dive('1',0,10)</script>
 			</div>
 		</div>
 	</body>
