some frontend work

--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -15,7 +15,7 @@
         <button id="load" onclick="Load_Dive()">Load Dive</button>
         <button id="setdive" onclick="Set_Dive('1', 40, 10)">Set Dive 1</button>
         <div id="sky"></div>
-        <h1 id="warning">Warning: This SCUBA Planner is still a prototype. It cannot be used in actual dive planning.</h1>
+        <h1 id="warning">Warning: This SCUBA dive planner is still a prototype. It cannot be used in actual dive planning.</h1>
 		<div id="main">
 			<div class="container" align ="left">
 				<div class="boat1"></div>
