added local jquery

--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="interact.js"></script>
 		<script src="functions.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script src="jquery-1.11.2.min.js"></script>
 		<title>Farfalle</title>
 	</head>
 
