fixed some bugs and added a decomp_stop text

--- a/Farfalle Dive Planner/main.html
+++ b/Farfalle Dive Planner/main.html
@@ -22,7 +22,7 @@
 				<div class="line">
 					<div class="line2"></div>
 					<div class="boat2"></div>
-					<div class="decomp_stop"></div>
+					<div class="decomp_stop"><h3>Time: 3min. Depth: 5m</h3></div>
 				</div>
 				<div id="1" class="draggable dive" data-pg="1">
 					<div id="time_depth">
